# robot-diff

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: APPENDIX.md
docs/conversion-examples/: robot.sdf  robot.urdf  robot.usda  robot.xml
robot_diff/: __init__.py  cli.py  diff.py  formatters.py  model.py  parsers.py
tests/: test_isaac_usd_parser.py  test_mjcf_parser.py  test_sdf_parser.py  test_urdf_parser.py
tests/isaac_usd_data/: err_missing_default_prim.usda  ver_collisions.usda  ver_cylinder_axes.usda  ver_inertial.usda  ver_joint_limits.usda  ver_simple_robot.usda  ver_visuals.usda
tests/mjcf_data/: err_duplicate_material_names.xml  err_invalid_xml.xml  ver_classes.xml  ver_collisions.xml  ver_complex_robot.xml  ver_default_values.xml  ver_freejoint.xml  ver_inertial.xml  ver_joint_range.xml  ver_rotations.xml  ver_simple_robot.xml  ver_visuals.xml
tests/sdf_data/: err_duplicate_joint_names.sdf  err_duplicate_link_names.sdf  ver_collisions.sdf  ver_complex_robot.sdf  ver_inertial.sdf  ver_joint_limits.sdf  ver_rotations.sdf  ver_simple_robot.sdf  ver_visuals.sdf
tests/urdf_data/: err_duplicate_joint_names.urdf  err_duplicate_link_names.urdf  err_duplicate_material_names.urdf  err_invalid_vec3.urdf  err_invalid_vec4.urdf  err_invalid_xml.urdf  ver_collisions.urdf  ver_complex_robot.urdf  ver_default_axis.urdf  ver_default_origin.urdf  ver_inertial.urdf  ver_joint_limits.urdf  ver_partial_origin.urdf  ver_simple_robot.urdf  ver_visuals.urdf
