[project]
name = "robot-diff"
version = "1.0.1"
description = "A diffing tool for robot models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml>=6.0.2",
    "tyro>=0.9.35",
    "usd-core>=25.11",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.1a28",
    "types-lxml>=2025.8.25",
    "types-usd>=24.5.2",
]

[project.scripts]
robot-diff = "robot_diff.cli:tyro_cli"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["robot_diff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ty.rules]
possibly-missing-attribute = "ignore"
